<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <!--
    TODO creare file stile per raggruppare scritte
    TODO definire colori e struttura-->

    <TextView
        android:id="@+id/lvl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="20sp"
        android:text="@string/corso_popup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lvl1c"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/lvl2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lvl2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="20sp"
        android:text="@string/professore_popup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lvl1" />

    <TextView
        android:id="@+id/lvl2c"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/lvl2"
        app:layout_constraintTop_toBottomOf="@id/lvl1c" />

    <TextView
        android:id="@+id/lvl3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="20sp"
        android:text="@string/giorno_popup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lvl2" />

    <TextView
        android:id="@+id/lvl3c"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/lvl2"
        app:layout_constraintTop_toBottomOf="@id/lvl2c" />

    <TextView
        android:id="@+id/lvl4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="20sp"
        android:text="@string/orario_popup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lvl3" />

    <TextView
        android:id="@+id/lvl4c"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/lvl2"
        app:layout_constraintTop_toBottomOf="@id/lvl3c"/>

    <Button
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conferma_prenotazione_popup"
        android:onClick="PopupFragment.reject"
        app:layout_constraintTop_toBottomOf="@id/reject"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/reject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/torna_indietro_popup"
        app:layout_constraintTop_toBottomOf="@id/lvl4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>