<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_section_date"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.calendar.SlotDayFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/course_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/first_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/panna"
            android:elevation="4dip"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/First_Slot"
                style="@style/TextViewDate"
                android:text="@string/first_slot" />

            <ImageView
                android:id="@+id/imageView1"
                style="@style/ImageView"
                android:contentDescription="@string/alert" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/second_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/panna"
            android:elevation="4dip"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/first_level">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/Second_Slot"
                style="@style/TextViewDate"
                android:text="@string/second_slot" />

            <ImageView
                android:id="@+id/imageView2"
                style="@style/ImageView"
                android:contentDescription="@string/alert" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/third_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/panna"
            android:elevation="4dip"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/second_level">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/Third_Slot"
                style="@style/TextViewDate"
                android:text="@string/third_slot" />

            <ImageView
                android:id="@+id/imageView3"
                style="@style/ImageView"
                android:contentDescription="@string/alert" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/fourth_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/panna"
            android:elevation="4dip"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/third_level">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/Fourth_Slot"
                style="@style/TextViewDate"
                android:text="@string/fourth_slot" />

            <ImageView
                android:id="@+id/imageView4"
                style="@style/ImageView"
                android:contentDescription="@string/alert" />
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

